<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoRemindMe</string>
    <string name="action_settings">Settings</string>
    <string name="set_alerts">Set Alerts</string>
    <string name="hello_world">Hello world!</string>
    <string name="frnds_email_lbl">Friend\'s email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_requests">Friend Request</string>
    <string name="Nothing"></string>
    <string name="email_label">Email</string>
    <string name="pwd_label">Password</string>
    <string name="login_label">Login</string>
    <string name="set_logout_lbl">Log Out</string>
    <string name="new_user_label">New to Geo Remind Me? Register here</string>
    <string name="full_name_label">Full Name</string>
    <string name="already_user_label">Already has account! Login here</string>
    <string name="new_acc_label">Register New Account</string>
    <string name="check_req_btn_lbl">Check Requests</string>
    <string name="mng_rmnd_btn_lbl">Manage Reminders</string>
    <string name="set_rmnd_btn_lbl">Set Reminder</string>
    <string name="add_frnd_btn_lbl">Add Friend</string>
    <string name="set_rmnd_frnd_lbl">Set Reminder for a friend</string>
    <string name="rmnd_dscpt_txt">Reminder Description</string>
    <string name="radius_txt">Radius</string>
    <string name="loc_txt">Location</string>
    <string name="frnd_label">Enter Friend Name</string>
    <string name="accept_btn_lbl">Accept</string>
    <string name="reject_btn_lbl">Reject</string>
    <string name="check_req_txt"> wants to add you as friend. Do you want to confirm ?</string>
    <string name="title_activity_pending_req">PendingReqActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_set_reminder">SetReminderActivity</string>
    <string name="title_activity_manage_reminders">ManageReminders</string>
    <string name="title_activity_notify">NotifyActivity</string>

</resources>