<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/Nothing"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->
        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="vertical" >
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Check req button -->

            <Button
                android:id="@+id/btnCheckReq"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:drawableLeft="@drawable/friends"
                android:text="@string/check_req_btn_lbl" />

            <!-- Manage reminders button -->

            <Button
                android:id="@+id/btnMngReminders"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:text="@string/mng_rmnd_btn_lbl" />

            <!-- Set reminders button -->

            <Button
                android:id="@+id/btnSetRmndrs"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:text="@string/set_rmnd_btn_lbl" />

            <!-- Add a friend button -->

            <Button
                android:id="@+id/btnSendReq"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:text="@string/add_frnd_btn_lbl" />

            <!-- Set Reminder for a friend button -->

            <Button
                android:id="@+id/btnStRmndFrnd"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:text="@string/set_rmnd_frnd_lbl" />

            <Button
                android:id="@+id/btnLogout"
                style="@style/button_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:text="@string/set_logout_lbl" />

            <!-- Link to Registration Screen -->
        </LinearLayout>
        <!-- Login Form Ends -->



    </RelativeLayout>

</ScrollView>